# gcop

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Doxyfile  README  applydocs.bash  gcop.pc  index.html  install.sh  package.xml  runtests.sh
lib/: CMakeLists.txt
lib/algos/: CMakeLists.txt  aspsa.h  ba.cc  ba.h  bacost.cc  bacost.h  body2dgraph.cc  body2dgraph.h  body2dslam.cc  body2dslam.h  body2dslamcost.cc  body2dslamcost.h  body2dtrack.cc  body2dtrack.h  body2dtrackcost.cc  body2dtrackcost.h  body3davoidcontroller.h  body3dcontroller.h  body3ddemcontroller.h  body3dtrack.cc  body3dtrack.h  body3dtrackcost.cc  controller.h  ddp.h  deterministicgndoep.h  dmoc.h  docp.h  doep.h  dynvisins.cc  dynvisins.h  gavoidcontroller.cc  gavoidcontroller.h  gdocp.h  gndocp.h  gndoep.h  gndoepv2.h  kinbody3dtrack.cc  kinbody3dtrack.h  kinbody3dtrackcost.cc  kinbody3dtrackcost.h  (+13 more)
lib/bulletsystems/: CMakeLists.txt  bulletrccar.cc  bulletrccar.h
lib/est/: CMakeLists.txt  Makefile.am  Makefile.in  camera.cc  camera.h  ce.cc  ce.h  corrector.h  filter.cc  filter.h  gmm.cc  gmm.h  gp.cc  gp.h  imu.cc  imu.h  imumanifold.h  imumodel.cc  imumodel.h  imuukf.cc  imuukf.h  ins.cc  insgps.h  insmanifold.cc  kalmancorrector.h  kalmanpredictor.h  model.cc  model.h  normal.cc  normal.h  point3d.cc  point3dgps.h  point3dmanifold.cc  point3dmanifold.h  predictor.h  qrotorsystemid.cpp  qrotorsystemid.h  quat.cc  trajectoryce.cc  trajectoryce.h  (+5 more)
lib/systems/: #body3d.h#  CMakeLists.txt  aerial_manipulation_feedforward_system.cpp  aerial_manipulation_feedforward_system.h  airbase.cc  airbase.h  airbot.cc  airbot.h  airm.cc  airm.h  airm_residual_network_model.cpp  airm_residual_network_model.h  airplanecost.cc  airplanecost.h  arm.cc  arm.h  autodiff.h  body2d.cc  body2d.h  body2dcost.cc  body2dcost.h  body2dforce.cc  body2dforce.h  body2dmanifold.cc  body2dtrack.cc  body2dtrack.h  body3d.h  body3dcost.h  body3dmanifold.cc  body3dmanifold.h  body3dtrack.cc  body3dtrack.h  car.cc  car.h  casadi_system.h  chain.cc  chain.h  chain1.cc  chain1.h  constraint.h  (+84 more)
lib/systems/constraints/: CMakeLists.txt  cylinder.h  direction_constraint.h  disk.cc  disk.h  diskconstraint.h  groundplane.h  pqpdem.h  shell.h  sphere.cc  sphere.h  sphereconstraint.h  yawvelfollow.h  yawvelocityconstraint.h
lib/systems/costs/: CMakeLists.txt  bacost.cc  bacost.h  body2dcost.cc  body2dcost.h  body2dslamcost.h  body2dtrackcost.cc  body2dtrackcost.h  body3dcost.h  body3dtrackcost.cc  body3dtrackcost.h  body3dwaypointcost.h  constraintcost.h  cost.h  kinbody3dcost.h  kinbody3dtrackcost.h  kinbodyprojtrackcost.cc  kinbodyprojtrackcost.h  kinrccarpathcost.h  lqcost.h  lqsensorcost.h  lscost.h  lssensorcost.h  multicost.h  multilscost.h  pqpdemcost.h  qrotoridmodelcost.h  rnlqcost.h  rnlqsensorcost.h  rpcost.h  sensorcost.h  yawcost.h
lib/systems/manifolds/: CMakeLists.txt  airmmanifold.cc  airmmanifold.h  body2dmanifold.cc  body2dmanifold.h  body3dmanifold.cc  body3dmanifold.h  gcarmanifold.cc  gcarmanifold.h  gunicyclemanifold.cc  gunicyclemanifold.h  imumanifold.cc  insmanifold.h  kinbody2dmanifold.cc  kinbody2dmanifold.h  kinbody3dmanifold.cc  kinbody3dmanifold.h  manifold.h  mbsmanifold.cc  mbsstate.h  point3dmanifold.h  pose3dmanifold.cc  pose3dmanifold.h  posemanifold.cc  posemanifold.h  qrotoridmanifold.h  rn.h  uuvmanifold.cc  uuvmanifold.h
lib/systems/parametrization/: CMakeLists.txt  controllertparam.h  controltparam.h  flatoutputtparam.h  flatoutputtparam.h.bk2  splinetparam.h  tparam.h  uniformsplinetparam.h
lib/systems/sensors/: CMakeLists.txt  body3dsensor.h  gps.h  imusensor.h  insgps.h  insimu.h  insmag.h  inspose.h  inspose3d.h  sensor.h
lib/utils/: .gitignore  CMakeLists.txt  bulletparser.h  bulletworld.h  camera.cc  camera.h  color.h  eigen_casadi_conversions.h  fully_connected_layer.cpp  fully_connected_layer.h  function.h  group.h  joint.cpp  joint.h  link.cpp  link.h  load_eigen_matrix.h  model.h  normal.cc  normal.h  params.cc  params.h  pose.h  quat.h  quat.os  samplenumericaldiff.h  se2.cc  se2.h  se3.cc  se3.h  so3.cc  so3.h  urdf_parser.cpp  urdf_parser.h  urdfjoint.cpp  urdflink.cpp  urdflink.h  urdfmodel.h  utils.cc  utils.h
lib/views/: CMakeLists.txt  airbotview.cc  airbotview.h  airmview.cc  airmview.h  airplaneview.cc  airplaneview.h  body2dgraphview.cc  body2dgraphview.h  body2dtrackview.cc  body2dtrackview.h  body2dview.cc  body2dview.h  body3dtrackview.cc  body3dtrackview.h  body3dview.h  boxview.cc  boxview.h  carview.cc  carview.h  chainview.cc  chainview.h  cylinderview.cc  cylinderview.h  demview.cc  demview.h  diskview.cc  diskview.h  dynvisinsview.cc  dynvisinsview.h  gcarview.cc  gcarview.h  geom3dview.cc  geom3dview.h  gunicycleview.cc  gunicycleview.h  heliview.cc  heliview.h  hrotorgeom3dview.cc  hrotorgeom3dview.h  (+37 more)
ros_packages/gcop_ctrl/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
ros_packages/gcop_ctrl/cfg/: mbsparamedit.cfg  mbssim.cfg  paramedit.cfg
ros_packages/gcop_ctrl/docs/: DMocInterfaceConfig-usage.dox  DMocInterfaceConfig.dox  DMocInterfaceConfig.wikidoc
ros_packages/gcop_ctrl/launch/: mbs.launch  mbssim.launch  rccar.launch  rccarhardware.launch
ros_packages/gcop_ctrl/params/: airbot.urdf  airbot.yaml  airbot2.urdf  airbot2.yaml  airbot3.urdf  airbot3.xacro  airbot3.xacrobak  airbot3.yaml  airbot4.urdf  airbot4.xacro  airbot4.yaml  airbot4_2.yaml  chain1.urdf  chain1.xacro  chain1.yaml  chain1_1.urdf  chain1_1.yaml  chain1_1f.yaml  chain1_2.urdf  chain1_3.urdf  chain1_3f.yaml  chain1_4.urdf  chain1_4.yaml  chain1_f.yaml  chain2.urdf  chain2.yaml  chain2_2.urdf  chain2_f.yaml  chain3.urdf  chain3.xacro  chain3.yaml  mbs.yaml  rccar.urdf  rccar.yaml  singlebody.urdf
ros_packages/gcop_ctrl/src/: chainload.cc  mbsroslib.cc  (+5 more)
ros_packages/gcop_est/: .gitignore  CMakeLists.txt  README  mainpage.dox  manifest.xml  nodelet_plugins.xml
tests/: CMakeLists.txt  test_airm_ff_system.cpp  test_airm_residual_network_model.cpp  test_casadi_system.cc  test_fully_connected_layer.cpp  test_load_eigen_matrix.cpp  test_loop_timer.cpp  test_quad_casadi_system.cpp
(+4849 files in other folders)
